--- a/src/app/orders/orders.html
+++ b/src/app/orders/orders.html
@@ -84,7 +84,9 @@
                                                 </p>
                                             </td>
 
-                                            <td>{{order.order_total | currency:currency}}  <p class="text-primary"> {{order.ptrFormat? "-PTR_INVOICE":""}}</p></td>
+                                            <td>{{order.order_total | currency:currency}} <p class="text-primary">
+                                                    {{order.ptrFormat? "-PTR_INVOICE":""}}</p>
+                                            </td>
                                             <!-- <td>
                                                 <span
                                                     class="label {{order.status == 'PAYMENT_CONFIRMED' ? 'label-success' : ''}} {{order.status == 'PAYMENT_PENDING' ? 'label-warning':''}} {{order.status == 'PAYMENT_FAILED' ? 'label-danger':''}}">{{order.status.replace("_", " ")}}</span>
@@ -117,20 +119,23 @@
                                                 <span>{{$index +1 }}</span>. {{sales.title | limitTo:
                                                 35}}{{sales.title.length > 35? '...': ''}} - {{ sales.order_quantity }}
                                                 - {{sales.tax_price*100/(sales.price-sales.tax_price) | number:0}}%
-                                                <span style="padding-left: 2%;" ng-class="sales.status === 'ORDER_APPROVED'? 'text-danger': 'text-success'">
+                                                <span style="padding-left: 2%;"
+                                                    ng-class="sales.status === 'ORDER_APPROVED'? 'text-danger': 'text-success'">
                                                     {{ sales.status === 'ORDER_APPROVED'? 'SHIPMENT PENDING': sales.status.replace("_"," ")}}
-                                                </span> 
+                                                </span>
                                                 <span ng-show="sales.deliverDate">
-                                                        --
-                                                    <span class="text-primary">Delivered On: {{ sales.deliverDate | date}}</span>
+                                                    --
+                                                    <span class="text-primary">Delivered On:
+                                                        {{ sales.deliverDate | date}}</span>
                                                 </span>
                                             </td>
 
                                             <td colspan="2" style="padding: 15px;">
-                                                <button type="button" ui-sref="main.inventory({itemId:sales.id})"class="btn btn-primary btn-sm margin-inline">
+                                                <button type="button" ui-sref="main.inventory({itemId:sales.id})"
+                                                    class="btn btn-primary btn-sm margin-inline">
                                                     ADD TO INVENTORY
                                                 </button>
-                                                
+
                                                 <!-- <button ng-show="$index === 0"
                                                     ng-disabled="sales.status === 'ORDER_DELIVERED'" type="button"
                                                     class="btn btn-success btn-sm margin-inline"
@@ -289,7 +294,9 @@
                     <button type="button" class="btn btn-success pull-right" ng-click="sendInvoice();">
                         Send Invoice
                     </button>
-                    <button type="button" ng-show="deliverData > 0 && deliverData != order.sales.length" class="btn btn-success pull-right" style="margin-right: 10px;" ng-click="downloadDeliveredInvoice();">
+                    <button type="button" ng-show="deliverData > 0 && deliverData != order.sales.length"
+                        class="btn btn-success pull-right" style="margin-right: 10px;"
+                        ng-click="downloadDeliveredInvoice();">
                         Download Invoice( Delivered Only )
                     </button>
                 </h4>
@@ -306,7 +313,8 @@
                         <h5>Payment Mode</h5>
                     </div>
                     <div class="col-md-3 col-xs-12" style=" margin-bottom: 16px;">
-                        <select ng-model="order.paymentType" ng-options="payment.name as payment.name for payment in payments" class="form-control"
+                        <select ng-model="order.paymentType"
+                            ng-options="payment.name as payment.name for payment in payments" class="form-control"
                             name="paymentType">
                             <option value="" selected>Select</option>
                         </select>
@@ -317,7 +325,7 @@
                         <thead>
                             <tr class="header">
                                 <th><input type="checkbox" style="margin: 2px;width: 15px;" ng-model="isAllSelected"
-                                    ng-change="toggleAll()">Title</th>
+                                        ng-change="toggleAll()">Title</th>
                                 <th>HSN</th>
                                 <th>Batch</th>
                                 <th>Expiry</th>
@@ -335,22 +343,26 @@
                                     <input type="checkbox" style="margin: 2px; width: 15px;" ng-model="sale.selected"
                                         ng-change="stateChanged()">{{sale.title}}
                                 </td>
-                                <td style="min-width: 120px; width: 16%;"><input type="text" class="form-control" name="HSN"
-                                        ng-model="sale.HSNCode"></td>
-                                <td style="min-width: 120px;width: 15%;"><input type="text" class="form-control" name="batchName"
-                                        ng-model="sale.batchName"></td>
-                                <td style="min-width: 120px;width: 13%"><input type="text" class="form-control" name="expiry"
-                                        ng-model="sale.expiryDate"></td>
-                                <td style="min-width: 100px; width: 14%;"><input type="number" class="form-control" name="quantity"
-                                        ng-model="sale.order_quantity"></td>
-                                <td ng-show="order.ptrFormat" style="min-width: 100px; width: 18%;"><input type="number" class="form-control"
-                                        name="free" ng-model="sale.free"></td>
-                                <td ng-show="order.ptrFormat" style="min-width: 100px; width: 18%;"><input type="number" class="form-control"
-                                        name="ptrDiscount" ng-model="sale.ptrDiscount"></td>{{sale.ptrDiscount}}
-                                <td ng-hide="order.ptrFormat"><input type="number" style="min-width: 100px; width: 18%;" class="form-control" name="mrp" ng-model="sale.MRP"></td>
+                                <td style="min-width: 120px; width: 16%;"><input type="text" class="form-control"
+                                        name="HSN" ng-model="sale.HSNCode"></td>
+                                <td style="min-width: 120px;width: 15%;"><input type="text" class="form-control"
+                                        name="batchName" ng-model="sale.batchName"></td>
+                                <td style="min-width: 120px;width: 13%"><input type="text" class="form-control"
+                                        name="expiry" ng-model="sale.expiryDate"></td>
+                                <td style="min-width: 100px; width: 14%;"><input type="number" class="form-control"
+                                        name="quantity" ng-model="sale.order_quantity"></td>
+                                <td ng-show="order.ptrFormat" style="min-width: 100px; width: 18%;"><input type="text"
+                                        class="form-control" name="free" ng-model="sale.free"></td>
+                                <td ng-show="order.ptrFormat" style="min-width: 100px; width: 18%;">
+                                    <input type="number" class="form-control" name="ptrDiscount"
+                                        ng-model="sale.ptrDiscount"></td>{{sale.ptrDiscount}}
+                                <td ng-hide="order.ptrFormat"><input type="number" style="min-width: 100px; width: 18%;"
+                                        class="form-control" name="mrp" ng-model="sale.MRP"></td>
                                 <td ng-show="order.ptrFormat">{{sale.MRP}}</td>
-                                <td ng-show="order.ptrFormat">{{(sale.price - sale.tax_price) | currency:currency }}</td>
-                                <td ng-hide="order.ptrFormat"><input type="number" style="min-width: 100px; width: 18%;" class="form-control" name="offer_price" ng-change="calculatePrice(sale)"
+                                <td ng-show="order.ptrFormat">{{(sale.price - sale.tax_price) | currency:currency }}
+                                </td>
+                                <td ng-hide="order.ptrFormat"><input type="number" style="min-width: 100px; width: 18%;"
+                                        class="form-control" name="offer_price" ng-change="calculatePrice(sale)"
                                         ng-model="sale.offer_price"></td>
                                 <td>{{sale.tax_price | currency:currency }}
                                     ({{ sale.taxPercent }}%)
@@ -364,11 +376,13 @@
             </div>
             <div class="modal-footer">
                 <!-- <button type="button" class="btn btn-warning" ng-show="splitInvoice" ng-click="removeItems()">Delete Items</button> -->
-                <button type="button" class="btn btn-primary" ng-show="splitInvoice" ng-click="splitInvoiceChange()">Split
+                <button type="button" class="btn btn-primary" ng-show="splitInvoice"
+                    ng-click="splitInvoiceChange()">Split
                     Invoice</button>
                 <button type="button" class="btn btn-primary" ng-hide="splitInvoice || returnInv"
                     ng-click="updateBatchAndExpiry()">Update</button>
-                <button type="button" class="btn btn-primary" ng-show="returnInv" ng-click="generateReturnInvoice()">Return
+                <button type="button" class="btn btn-primary" ng-show="returnInv"
+                    ng-click="generateReturnInvoice()">Return
                     Invoice</button>
                 <button type="button" class="btn" data-dismiss="modal">Close</button>
             </div>
